--- a/Offenses Analysis.ipynb
+++ b/Offenses Analysis.ipynb
@@ -182,16 +182,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(378265, 12)\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -340,13 +333,13 @@
        "4   BURGUNOCCSTRUC/CV OR ATT.  PRINCIPAL IN ATTEMPT  ADJUDICATION NOT WITHHELD  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# \"inmate_active_offenses.csv\" has 378l rows x 17 columns\n",
+    "# \"inmate_active_offenses.csv\" has 378,265 rows x 17 columns\n",
     "reviews = pd.read_csv(\"inmate_active_offenses_cps.csv\")\n",
     "reviews.head()"
    ]
