--- a/Data Analysis Inmate Active Root.ipynb
+++ b/Data Analysis Inmate Active Root.ipynb
@@ -20,19 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/bzjin/anaconda3/lib/python3.6/site-packages/IPython/core/interactiveshell.py:2698: DtypeWarning:\n",
-      "\n",
-      "Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -201,14 +191,14 @@
        "4    valid release date              MEDIUM            CFRC-MAIN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# \"inmate_release_root.csv\" has 371,553 rows x 17 columns\n",
-    "reviews = pd.read_csv(\"inmate_release_root.csv\")\n",
+    "reviews = pd.read_csv(\"inmate_release_root.csv\", low_memory=False)\n",
     "\n",
     "# first 1000 inmates data\n",
     "first = reviews.iloc[0:10000,:]\n",
@@ -439,7 +429,7 @@
     }
    ],
    "source": [
-    "#Release by month and year\n",
+    "#Release by year\n",
     "releaseSeries = pd.Series(first[\"PrisonReleaseDate\"])\n",
     "releaseSeries = pd.to_datetime(releaseSeries)\n",
     "counts = releaseSeries.groupby(releaseSeries.dt.strftime('%Y')).count().sort_values()\n",
